<resources>
    <string name="app_name">Gerenciador de Tarefas</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Leandro</string>
    <string name="nav_header_subtitle">Leandro@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="action_settings2" />
    <string name="todos_os_convidados">Gerenciador de Tarefas\n</string>
    <string name="nome">Tarefa</string>
    <string name="presença">Você realizou a tarefa?\n</string>
    <string name="presente">Tarefa feita</string>
    <string name="ausente">Tarefa a fazer</string>
    <string name="enviar">enviar</string>
    <string name="menu_present">Tarefas feitas</string>
    <string name="menu_absent">Tarefas não feitas</string>
    <string name="digite_a_descricao">Digite a descrição</string>
    <string name="descricao_tarefa">Descrição da tarefa</string>
</resources>